# text-editor

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format-all.sh
include/: buffer.hpp  editor.hpp  logger.hpp  terminal.hpp  utils.hpp  window.hpp
include/input/: base.hpp  key.hpp
include/ui/: base.hpp  box.hpp  buffer.hpp  rect.hpp  status.hpp
src/: buffer.cpp  editor.cpp  logger.cpp  main.cpp  terminal.cpp  utils.cpp  window.cpp
src/input/: base.cpp  key.cpp
src/ui/: base.cpp  box.cpp  buffer.cpp  rect.cpp  status.cpp
